--- a/Servicios/Servicios.csproj
+++ b/Servicios/Servicios.csproj
@@ -1,22 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="ClasePOO\" />
+    <ProjectReference Include="..\Infraestructura\Infraestructura.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ClasePOO\" />
+    <None Remove="ContactosService\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Npgsql" Version="8.0.0-preview.4" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Servicios\Servicios.csproj" />
+    <Folder Include="ContactosService\" />
   </ItemGroup>
 </Project>
